# rust-web

./: Cargo.toml  LICENSE  Makefile  Readme.md
backend/: Cargo.toml  Readme.md
backend/src/: main.rs
docker/: Dockerfile
frontend/: Cargo.toml  Makefile  Readme.md  index.html
frontend/css/: style.scss
frontend/src/: main.rs  video_details.rs  videos_list.rs
weblib/: Cargo.toml
weblib/src/: lib.rs
